Changelog for collective.emaillogin
===================================


1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2011-11-23)
----------------

- In the mailPassword method explicitly disallow looking for a member
  with the given forgotten user id when this is an e-mail address.  We
  only search for users with that e-mail address as login name.  This
  only has an effect when you have changed your e-mail address to
  something really different (instead of just a change in the case).
  Without this change, you could reset your password with your old
  address, but could not login with that address.
  [maurits]

- Refactored authenticateCredentials.  This avoids getting a message
  stating you are logged in when in fact you are not logged in.
  [maurits]

- Added upgrade step to migrate all existing users to have a lowercase
  login name (when their e-mail address is used as login name).
  [maurits]

- Patch PloneTool.setMemberProperties to always set the e-mail address
  to lower case and to update the login name when the e-mail address
  changes.
  [maurits]

- In validate_personalize.vpy turn the e-mail address to lowercase.
  [maurits]

- Patch Products.PlonePAS.tools.membership.MembershipTool.addMember to
  always add the member as lowercase, also when not called from
  registered.cpy
  [maurits]

- In join_form_validate.vpy turn the e-mail address to lowercase.
  [maurits]

- Changed getMemberByLoginName and ZODBUserManager.authenticateCredentials
  to explicitly search for the lower case login name if the initial
  literal search does not work.
  [maurits]

- Added classifiers for Plone 3.2 and 3.3 in setup.py.
  [maurits]


0.8 (2010-05-18)
----------------

- Removed mail_me functionality from join_form as this claimed to be
  sending the password, which Plone has not been doing for a long
  time, if ever.  The backend handling for this was already removed
  from Plone itself.
  [maurits]
